/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package stability.rpc;

option java_package = "com.google.devtools.common.metrics.stability.rpc.proto";
option java_outer_classname = "RpcErrorProto";

// Use RpcErrorUtil to convert this message and ExceptionDetail.
message RpcError {
  // Optional.
  // GFE HTTP header has size limit, so gRPC side channel can not transfer
  // large size data.
  CompressedExceptionDetail compressed_exception_detail = 1;
}

message CompressedExceptionDetail {
  // Required.
  // Compression format of the compressed_data field.
  CompressionFormat compression_format = 1;

  // Required.
  bytes compressed_data = 2;

  enum CompressionFormat {
    UNSPECIFIED_COMPRESSION_FORMAT = 0;

    // deviceinfra.shared.error.ExceptionDetail in DEFLATE format.
    DEFLATE = 1;
  }
}
